src/test/ui/if-without-block.stderr
error: expected `{`, found `}`
  --> $DIR/if-without-block.rs:17:1
   |
13 |     if 5 == {
   |     -- this `if` statement has a condition, but no block
...
17 | }
   | ^

error: aborting due to previous error

